feat(beast): 新增灵兽系统完整功能实现
- 实现灵兽孵化、进化、放生、出战等核心业务逻辑
- 添加灵兽战斗属性计算公式和等级成长机制
- 集成统一认证切面，支持平台身份验证和用户状态校验
- 实现灵兽恢复、部署管理等功能
- 添加战斗上下文封装和兽栏单元格管理
- 支持灵兽变异特性、技能解锁等高级功能